--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2212,6 +2212,10 @@ select {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
 .pt-0\.5 {
   padding-top: 0.125rem;
 }
