--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2364,6 +2364,9 @@ select {
 .font-thin {
   font-weight: 100;
 }
+.font-light {
+  font-weight: 300;
+}
 .uppercase {
   text-transform: uppercase;
 }
